# career-pathfinder

./: .env.example  .gitignore  app.py  hiring_companies_analyzer.py  pyproject.toml  pyvenv.cfg  requirements.txt  resume_processor.py
Scripts/: activate  activate.bat
static/css/: style.css
static/js/: main.js
templates/: about.html  analyze_resume.html  base.html  contact.html  features.html  hiring_companies.html  home.html  index.html  job_recommendations.html  job_tracker.html  login.html  profile.html  register.html  resume_analysis.html  skill_gap_analysis.html
