[build-system]
requires = [
    "setuptools",
    "cython>=0.25,<3.0",
    "cymem>=2.0.2,<2.1.0",
    "preshed>=3.0.2,<3.1.0",
    "murmurhash>=0.28.0,<1.1.0",
    "thinc>=8.1.8,<8.2.0",
    "numpy>=1.15.0",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.poetry]
name = "career-pathfinder"
version = "0.1.0"
description = "Flask app"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

